--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
-project(_QR_Code_Generator)
+project(QR_Code_Generator)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(_QR_Code_Generator src/main.cpp src/qrcodegen.cpp src/qrcodegen.h)
+add_executable(QR_Code_Generator src/main.cpp src/qrcodegen.cpp src/qrcodegen.h)
